--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Bata Bit</title>
 </head>
 <body>
     <header class="header">
-        <img src="/assets/img/logo.svg" alt="Logo" class="header__logo">
+        <img src="assets/img/logo.svg" alt="Logo" class="header__logo">
         <div class="header__title__container">
             <h1 class="header__title">La próxima revolución en el intercambio de criptomonedas</h1>
             <p class="header__text">Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a href="#" class="header__button">Conoce Nuestros Planes<span><img src="/assets/icons/down-arrow.svg" alt="arrow"></span></a>
+            <a href="#" class="header__button">Conoce Nuestros Planes<span><img src="assets/icons/down-arrow.svg" alt="arrow"></span></a>
         </div>
     </header>
     <main class="main">
         <section class="section exchange">
             <div class="btc_container">
-                <img src="/assets/img/btc-img.webp" alt="">
+                <img src="assets/img/btc-img.webp" alt="">
             </div>
             <div class="exchange__title-text">
                 <h2 class="exchange__title">Visibilizamos todas las tasas de cambio.</h2>
@@ -31,22 +31,22 @@
                 <table class="table__data">
                     <tr class="cripto cr1">
                         <td class="cr__currency">Bitcoin</td>
-                        <td class="cr__price">$ 1.96<span><img src="/assets/icons/trending-down.svg" alt=""></span></td>
+                        <td class="cr__price">$ 1.96<span><img src="assets/icons/trending-down.svg" alt=""></span></td>
                     </tr>
                     <tr class="cripto cr2">
                         <td class="cr__currency">Ehtereum</td>
-                        <td class="cr__price">$ 0.07<span><img src="/assets/icons/trending-up.svg" alt=""></span></td>
+                        <td class="cr__price">$ 0.07<span><img src="assets/icons/trending-up.svg" alt=""></span></td>
                     </tr>
                     <tr class="cripto cr3">
                         <td class="cr__currency">Ripple</td>
-                        <td class="cr__price">$ 2.15<span><img src="/assets/icons/trending-down.svg" alt=""></span></td>
+                        <td class="cr__price">$ 2.15<span><img src="assets/icons/trending-down.svg" alt=""></span></td>
                     </tr>
                     <tr class="cripto cr4">
                         <td class="cr__currency">Stellar</td>
-                        <td class="cr__price">$ 4.96<span><img src="/assets/icons/trending-down.svg" alt=""></span></td>
+                        <td class="cr__price">$ 4.96<span><img src="assets/icons/trending-down.svg" alt=""></span></td>
                     </tr>
                 </table>
-                <span class="right-arrow"><img src="/assets/icons/right-arrow.svg" alt="arrow"></span>
+                <span class="right-arrow"><img src="assets/icons/right-arrow.svg" alt="arrow"></span>
             </div>
             <div class="act">
                 <p><b>Actualizado: </b>19 Julio 23:45</p>
@@ -58,22 +58,22 @@
                 <p class="text">Confiable y diseñado para su uso diario.</p>
             </div>
             <div class="product__block">
-                <img src="/assets/icons/clock.svg" alt="clock">
+                <img src="assets/icons/clock.svg" alt="clock">
                 <h3 class="title">Tiempo real</h3>
                 <p class="text">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
             </div>
             <div class="product__block">
-                <img src="/assets/icons/eye.svg" alt="eye">
+                <img src="assets/icons/eye.svg" alt="eye">
                 <h3 class="title">No hay tasas escondidas</h3>
                 <p class="text">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
             </div>
             <div class="product__block">
-                <img src="/assets/icons/dollar-sign.svg" alt="dollar">
+                <img src="assets/icons/dollar-sign.svg" alt="dollar">
                 <h3 class="title">Compara monedas</h3>
                 <p class="text">No más rumores, con el Batabit sabrás el valor real de cada moneda en el mercado actual.</p>
             </div>
             <div class="product__block last__block">
-                <img src="/assets/icons/check-circle.svg" alt="check">
+                <img src="assets/icons/check-circle.svg" alt="check">
                 <h3 class="title">Información confiable</h3>
                 <p class="text">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
             </div>
@@ -96,7 +96,7 @@
                 <p class="block__text">*Ahorras $129 comparado al plan mensual.</p>
                 <div class="button">
                     <p>Escoger este</p>
-                    <span><img src="/assets/icons/orange-right-arrow.svg" alt=""></span>
+                    <span><img src="assets/icons/orange-right-arrow.svg" alt=""></span>
                 </div>
             </div>
         </section>
@@ -108,7 +108,7 @@
             <p>Hackernews</p>
         </div>
         <div class="logo">
-            <img src="/assets/img/logo-footer.svg" alt="batata">
+            <img src="assets/img/logo-footer.svg" alt="batata">
         </div>
     </footer>
 </body>
