--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="assets/img/logo.svg" alt="Logo" class="header__logo">
+        <img src="assets/img/Logo.svg" alt="Logo" class="header__logo">
         <div class="header__title__container">
             <h1 class="header__title">La próxima revolución en el intercambio de criptomonedas</h1>
             <p class="header__text">Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
