--- a/index.html
+++ b/index.html
@@ -82,24 +82,43 @@
         <section class="section imagen--container">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section class="section choose--container">
-            <div class="choose__title">
+        <section class="section plans-container">
+            <div class="plans__title">
                 <h2>Escoge el plan que mejor se ajuste a ti.</h2>
                 <p>Cualquier plan te da acceso completo a nuestra plataforma</p>
             </div>
-            <div class="selling__block">
-                <span class="recommen">Recomendado</span>
-                <h3>Pago Anual</h3>
-                <div class="block__price">
-                    <p>$</p>
-                    <span>99</span>
-                </div>
-                <p class="block__text">*Ahorras $129 comparado al plan mensual.</p>
-                <div class="button">
-                    <p>Escoger este</p>
-                    <span><img src="assets/icons/orange-right-arrow.svg" alt=""></span>
-                </div>
-            </div>
+            <section class="plans-container__slider">
+                <article class="plans-container__card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plans-container__info">
+                        <h3 class="info__title">Pago Anual</h3>
+                        <div class="info__price"><span>$</span><p>99</p></div>
+                        <p class="info__saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="info__card">Escoger este <span><img src="/assets/icons/orange-right-arrow.svg" alt="arrow"></span>
+                        </button>
+                    </div>
+                </article>
+                <article class="plans-container__card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plans-container__info">
+                        <h3 class="info__title">Pago Anual</h3>
+                        <div class="info__price"><span>$</span><p>99</p></div>
+                        <p class="info__saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="info__card">Escoger este <span><img src="/assets/icons/orange-right-arrow.svg" alt="arrow"></span>
+                        </button>
+                    </div>
+                </article>
+                <article class="plans-container__card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plans-container__info">
+                        <h3 class="info__title">Pago Anual</h3>
+                        <div class="info__price"><span>$</span><p>99</p></div>
+                        <p class="info__saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="info__card">Escoger este <span><img src="/assets/icons/orange-right-arrow.svg" alt="arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </section>
         </section>
     </main>
     <footer class="footer">
